ivpol-keyless-test/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  namespace: default
spec:
  containers:
    - name: app
      image: "ghcr.io/onasser1/test-keyless-extensions:unsigned-tag"
