ivpol-keyless-test/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: default
spec:
  containers:
    - name: app
      image: "ghcr.io/onasser1/test-keyless-extensions:latest"
